Fix ordering, spacing of bar chart elements and give own color to optional elements.

--- a/www/assets/stylesheets/style.css
+++ b/www/assets/stylesheets/style.css
@@ -527,7 +527,7 @@ img {
 }
 
 .tco-component-charger {
-  background: var(--standard-theme-petrol);
+  background: var(--secondary-theme-blue);
 }
 
 .tco-component-private-charging {
